# image-processing

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/: final-fix-report.md  task-7-report.md
docs/superpowers/plans/: 2026-07-10-searchmax-opencv.md  2026-07-12-compact-image-first-ui.md  2026-07-12-roi-hue-variation.md  2026-07-12-roi-saturation-variation.md  2026-07-12-roi-template-preview.md
docs/superpowers/specs/: 2026-07-10-searchmax-opencv-design.md  2026-07-12-compact-image-first-ui-design.md  2026-07-12-guided-test-workflow-design.md  2026-07-12-roi-hue-variation-design.md  2026-07-12-roi-saturation-variation-design.md  2026-07-12-roi-template-preview-design.md
src/searchmax/: app.py  evaluator.py  generator.py  image_io.py  matcher.py  models.py  persistence.py  training.py
src/searchmax/ui/: __init__.py  image_view.py  main_window.py  template_preview.py  workers.py
tests/: test_end_to_end.py  test_evaluator.py  test_generator.py  test_matcher.py  test_models.py  test_persistence.py  test_training.py
tests/ui/: test_image_view.py  test_main_window.py  test_template_preview.py
