[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "opencv-searchmax"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26", "opencv-python>=4.9", "PySide6>=6.7"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-qt>=4.4"]

[project.scripts]
opencv-searchmax = "searchmax.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
